# Matrix

./: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  rational.cpp  rational.h  solution.tex
data/: input1.txt  input2.txt  input3.txt  input4.txt  output1.txt  output2.txt  output3.txt  output4.txt
